menu: Fix `.state-badge` in .active `.nav-level-2 li` alignment on firefox
refs #4565

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -344,7 +344,6 @@
 
     > .badge-nav-item {
       display: flex;
-      align-items: center;
 
       a:first-of-type {
         flex: 1 1 auto;
@@ -537,7 +536,6 @@ html.no-js  #toggle-sidebar {
 #layout:not(.sidebar-collapsed) #menu .nav-level-1 > .nav-item:not(.active).hover .nav-level-2 > li {
   &.badge-nav-item {
     display: flex;
-    align-items: center;
   }
 
   &.badge-nav-item a:first-of-type {
